--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h1>Alfa Cable Network</h1>
-					<p>A responsive business oriented template with a video background<br />
-					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
+					<p>Broadcasting direct from <a href="http://netsetmedia.in/">Netsetmedia Pvt. Ltd.</a></p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
@@ -108,13 +107,21 @@
 				</div>
 			</section>
 
-		<!-- CTA -->
+		<!-- CTA 
 			<section id="cta" class="wrapper">
 				<div class="inner">
 					<h2>Curabitur ullamcorper ultricies</h2>
 					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
 				</div>
 			</section>
+		-->
+		<!-- MAP -->
+		<section id="cta" class="wrapper">
+			<div class="inner">
+				<h2>Direction to our Office</h2>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14750.461250710869!2d70.0682634!3d22.4435004!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x138fcc8c9dc07e0!2sAlfa%20Cable%20Network!5e0!3m2!1sen!2sin!4v1593178796876!5m2!1sen!2sin" width="400" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+			</div>
+		</section>
 
 		<!-- Testimonials -->
 			<section class="wrapper">
