--- a/index.html
+++ b/index.html
@@ -45,164 +45,249 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>Sem turpis amet semper</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<h2>Benifits you can get</h2>
+						<p></p>
 					</header>
 					<div class="highlights">
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
-									<h3>Feugiat consequat</h3>
+									<a href="#" class="icon fa-life-ring"><span class="label">Icon</span></a>
+									<h3>Instant Service</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Most of our services are done within 24 hrs.</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
-									<h3>Ante sem integer</h3>
+									<a href="#" class="icon fa-pie-chart"><span class="label">Icon</span></a>
+									<h3>Flexible Options</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>We provide standard channel selection procedure as provided by the TRAI.</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
-									<h3>Ipsum consequat</h3>
+									<a href="#" class="icon fa-play-circle"><span class="label">Icon</span></a>
+									<h3>HD Set Top Box Only</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>To keep our customers future proof, we only provide HD set top box.</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
-									<h3>Interdum gravida</h3>
+									<h3>Uninterrupted Transmission</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Unlike DTH service, our singals/transmission are not affected by extreme weather.</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
-									<h3>Faucibus consequat</h3>
+									<h3>Local Content</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>We have 10+ local channels that can fulfill all the daily requirements (inclulded in FTA).</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<a href="#" class="icon fa-handshake-o"><span class="label">Icon</span></a>
+									<h3>Direct Interation with Operator</h3>
+								</header>
+								<p>Best thing is the interection with the service provider that you can get at any time.</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Accumsan viverra</h3>
+									<h3>Flexible Mode of Payment</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>We accept payments through Paytm, Google Pay, PhonePe, BHIM and all other UPI apps.</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<a href="#" class="icon fa-newspaper-o"><span class="label">Icon</span></a>
+									<h3>Navanagar News</h3>
+								</header>
+								<p>Get daily dose of fresh Jamnagar news on Jay Cinema (Ch. 1).</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<a href="#" class="icon fa-shopping-cart"><span class="label">Icon</span></a>
+									<h3>Wide Variety</h3>
+								</header>
+								<p>Our channel cataloge has wide variety of channels (both HD and SD) from which you can choose.</p>
 							</div>
 						</section>
 					</div>
 				</div>
 			</section>
 
-		<!-- CTA 
+		<!-- Testimonials -->
 			<section id="cta" class="wrapper">
 				<div class="inner">
-					<h2>Curabitur ullamcorper ultricies</h2>
-					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
-				</div>
-			</section>
-		-->
-		<!-- MAP -->
-		<section id="cta" class="wrapper">
-			<div class="inner">
-				<h2>Direction to our Office</h2>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14750.461250710869!2d70.0682634!3d22.4435004!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x138fcc8c9dc07e0!2sAlfa%20Cable%20Network!5e0!3m2!1sen!2sin!4v1593178796876!5m2!1sen!2sin" width="400" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-			</div>
-		</section>
-
-		<!-- Testimonials -->
-			<section class="wrapper">
-				<div class="inner">
 					<header class="special">
-						<h2>Faucibus consequat lorem</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<h2>Channel Packages and Options</h2>
+						<p>We follow TRAI's rules in channel selection procedure so that our customers can select channels as per their requirements. And so, they have to pay for only those channels that they actually watch.</p>
 					</header>
 					<div class="testimonials">
 						<section>
 							<div class="content">
-								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-								</blockquote>
-								<div class="author">
-									<div class="image">
-										<img src="images/pic01.jpg" alt="" />
+								<h4>FTA Pack (Free to Air) Base/Mandatory Package</h4>
+									<div class="table-wrapper">
+										<table class="alt">
+											<thead>
+												<tr>
+													<th>Name</th>
+													<th>Price</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>FTA</td>
+													<td>Rs. 130.00 + TAX</td>
+												</tr>											
+											</tbody>
+										</table>
 									</div>
-									<p class="credit">- <strong>Jane Doe</strong> <span>CEO - ABC Inc.</span></p>
-								</div>
+								<h4>For Ala Carta Channels</h4>
+									<div class="table-wrapper">
+										<p>Please download the PDF for more details</p>
+									</div>
 							</div>
 						</section>
 						<section>
 							<div class="content">
-								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-								</blockquote>
-								<div class="author">
-									<div class="image">
-										<img src="images/pic03.jpg" alt="" />
+								<h4>Jay Packages (Rates Inc. FTA and Taxes)</h4>
+									<div class="table-wrapper">
+										<table class="alt">
+											<thead>
+												<tr>
+													<th>Name</th>
+													<th>Price</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Silver</td>
+													<td>Rs. 210.00</td>
+												</tr>
+												<tr>
+													<td>Gold</td>
+													<td>Rs. 270.00</td>
+												</tr>
+												<tr>
+													<td>Platinum</td>
+													<td>Rs. 320.00</td>
+												</tr>
+												<tr>
+													<td>Diamond</td>
+													<td>Rs. 360.00</td>
+												</tr>
+												<tr>
+													<td>HD</td>
+													<td>Rs. 470.00</td>
+												</tr>											
+											</tbody>
+										</table>
 									</div>
-									<p class="credit">- <strong>John Doe</strong> <span>CEO - ABC Inc.</span></p>
-								</div>
 							</div>
 						</section>
 						<section>
 							<div class="content">
-								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-								</blockquote>
-								<div class="author">
-									<div class="image">
-										<img src="images/pic02.jpg" alt="" />
+								<h4>Channel Provider Packages</h4>
+									<div class="table-wrapper">
+										<table class="alt">
+											<thead>
+												<tr>
+													<th>Name</th>
+													<th>Price</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Star Pack</td>
+													<td>Rs. xx.00</td>
+												</tr>
+												<tr>
+													<td>Sony Pack</td>
+													<td>Rs. xx.00</td>
+												</tr>
+												<tr>
+													<td>Colors Pack</td>
+													<td>Rs. xx.00</td>
+												</tr>
+												<tr>
+													<td>Zee Pack</td>
+													<td>Rs. xx.00</td>
+												</tr>
+												<tr>
+													<td>Discovery Pack</td>
+													<td>Rs. xx.00</td>
+												</tr>
+												<tr>
+													<td>Turner Pack</td>
+													<td>Rs. xx.00</td>
+												</tr>
+												<tr>
+													<td>Sony Sports Pack</td>
+													<td>Rs. xx.00</td>
+												</tr>											
+											</tbody>
+										</table>
 									</div>
-									<p class="credit">- <strong>Janet Smith</strong> <span>CEO - ABC Inc.</span></p>
-								</div>
 							</div>
 						</section>
 					</div>
 				</div>
 			</section>
+		
+		<!-- Payment -->
+		<section class="wrapper">
+			<div class="inner">
+				<header class="special">
+					<h2>Payment Options</h2>
+					<p>It is recommended to opt for contact less payments. We support wide variety of payment methods. You can choose any the option and do your payments from your home hassle free.</p>
+				</header>
+				
+			</div>
+		</section>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
 					<div class="content">
 						<section>
-							<h3>Accumsan montes viverra</h3>
-							<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+							<h3>Address</h3>
+							<p>Alfa Cable Network</p>
+							<p>Road no. 2, Siddhivinayak Park, <br> B/h Old Sadhana Colony <br> Ranjitsagar Road</p>
+							<p>Jamnagar - 361005</p>
 						</section>
 						<section>
-							<h4>Sem turpis amet semper</h4>
+								<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14750.461250710869!2d70.0682634!3d22.4435004!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x138fcc8c9dc07e0!2sAlfa%20Cable%20Network!5e0!3m2!1sen!2sin!4v1593178796876!5m2!1sen!2sin"
+								 width="300" height="220" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+						</section>
+						<section>
+							<h4>Contact Numbers</h4>
 							<ul class="alt">
-								<li><a href="#">Dolor pulvinar sed etiam.</a></li>
-								<li><a href="#">Etiam vel lorem sed amet.</a></li>
-								<li><a href="#">Felis enim feugiat viverra.</a></li>
-								<li><a href="#">Dolor pulvinar magna etiam.</a></li>
-							</ul>
-						</section>
-						<section>
-							<h4>Magna sed ipsum</h4>
-							<ul class="plain">
-								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-								<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-								<li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li>
+								<li>Office 1: +91 8866199346</li>
+								<li>Office 2: +91 7265844716</li>
 							</ul>
 						</section>
 					</div>
 					<div class="copyright">
-						&copy; Untitled. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.
+						&copy; Untitled. Photos <a href="https://unsplash.co">Unsplash</a>.
 					</div>
 				</div>
 			</footer>
