--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="generic.html">Generic</a></li>
+					<li><a href="#feature-section">Features</a></li>
+					<li><a href="#cta">Channel Packages</a></li>
+					<li><a href="#payment-section">Payment Options</a></li>
+					<li><a href="#footer">Contact Us</a></li>
 				</ul>
 			</nav>
 
@@ -41,8 +43,8 @@
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
 
-		<!-- Highlights -->
-			<section class="wrapper">
+		<!-- Features -->
+			<section class="wrapper" id="feature-section">
 				<div class="inner">
 					<header class="special">
 						<h2>Benifits you can get</h2>
@@ -134,7 +136,7 @@
 				</div>
 			</section>
 
-		<!-- Testimonials -->
+		<!-- Channel Packages -->
 			<section id="cta" class="wrapper">
 				<div class="inner">
 					<header class="special">
@@ -249,18 +251,49 @@
 									</div>
 							</div>
 						</section>
+						
 					</div>
+					<a href="https://storage.googleapis.com/prash/alfalist.pdf" class="button icon fa-download">Channel Package Price List PDF download</a>
+					<p>*Note : For latest price list, please contact our office.</p>
 				</div>
 			</section>
 		
 		<!-- Payment -->
-		<section class="wrapper">
+		<section class="wrapper" id="payment-section">
 			<div class="inner">
 				<header class="special">
 					<h2>Payment Options</h2>
 					<p>It is recommended to opt for contact less payments. We support wide variety of payment methods. You can choose any the option and do your payments from your home hassle free.</p>
 				</header>
-				
+				<div class="highlights">
+					<section>
+						<div class="content">
+							<header>
+								<img src="images/qr.jpg" alt="AIO UPI" style="width:200px;height:200px;">
+								<h3>UPI QR-code</h3>
+							</header>
+							<p>We accept all the UPI applications (BHIM, Google Pay, PhonePe). Just scan the QR code provided.</p>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<a href="#" class="icon fa-credit-card-alt"><span class="label">Icon</span></a>
+								<h3>Paytm Wallet</h3>
+							</header>
+							<p>We support paytm wallet. Wallet Phone No. : 8866199346</p>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<a href="#" class="icon fa-google-wallet"><span class="label">Icon</span></a>
+								<h3>Google Pay(UPI)</h3>
+							</header>
+							<p>We support Google Pay. You can scan the UPI QR code or just end this phone no. 8866199346 in your Google Pay app.</p>
+						</div>
+					</section>
+				</div>
 			</div>
 		</section>
 
