--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 						</section>
 						
 					</div>
-					<a href="https://storage.googleapis.com/prash/alfalist.pdf" class="button icon fa-download">Channel Package Price List PDF download</a>
+					<a href="https://storage.googleapis.com/prash/alfalist.pdf" class="button icon fa-download">Channel Price List PDF download</a>
 					<p>*Note : For latest price list, please contact our office.</p>
 				</div>
 			</section>
@@ -290,7 +290,7 @@
 								<a href="#" class="icon fa-google-wallet"><span class="label">Icon</span></a>
 								<h3>Google Pay(UPI)</h3>
 							</header>
-							<p>We support Google Pay. You can scan the UPI QR code or just end this phone no. 8866199346 in your Google Pay app.</p>
+							<p>We support Google Pay. You can scan the UPI QR code or just send to this phone no. 8866199346 in your Google Pay app.</p>
 						</div>
 					</section>
 				</div>
@@ -304,8 +304,7 @@
 						<section>
 							<h3>Address</h3>
 							<p>Alfa Cable Network</p>
-							<p>Road no. 2, Siddhivinayak Park, <br> B/h Old Sadhana Colony <br> Ranjitsagar Road</p>
-							<p>Jamnagar - 361005</p>
+							<p>Road no. 2, Siddhivinayak Park, <br> B/h Old Sadhana Colony <br> Ranjitsagar Road <br> Jamnagar - 361005</p>
 						</section>
 						<section>
 								<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14750.461250710869!2d70.0682634!3d22.4435004!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x138fcc8c9dc07e0!2sAlfa%20Cable%20Network!5e0!3m2!1sen!2sin!4v1593178796876!5m2!1sen!2sin"
