--- a/index.html
+++ b/index.html
@@ -214,37 +214,49 @@
 											<thead>
 												<tr>
 													<th>Name</th>
-													<th>Price</th>
+													<th>Price (Inc. GST 18%)</th>
 												</tr>
 											</thead>
 											<tbody>
 												<tr>
+													<td>Jay NCF (Mandatory)</td>
+													<td>Rs. 153.40</td>
+												</tr>
+												<tr>
 													<td>Star Pack</td>
-													<td>Rs. xx.00</td>
+													<td>Rs. 57.82</td>
 												</tr>
 												<tr>
 													<td>Sony Pack</td>
-													<td>Rs. xx.00</td>
+													<td>Rs. 36.58</td>
 												</tr>
 												<tr>
 													<td>Colors Pack</td>
-													<td>Rs. xx.00</td>
+													<td>Rs. 29.50</td>
 												</tr>
 												<tr>
 													<td>Zee Pack</td>
-													<td>Rs. xx.00</td>
+													<td>Rs. 46.02</td>
 												</tr>
 												<tr>
 													<td>Discovery Pack</td>
-													<td>Rs. xx.00</td>
+													<td>Rs. 9.44</td>
+												</tr>
+												<tr>
+													<td>Disney Pack</td>
+													<td>Rs. 11.80</td>
 												</tr>
 												<tr>
 													<td>Turner Pack</td>
-													<td>Rs. xx.00</td>
+													<td>Rs. 5.02</td>
 												</tr>
 												<tr>
 													<td>Sony Sports Pack</td>
-													<td>Rs. xx.00</td>
+													<td>Rs. 5.90</td>
+												</tr>
+												<tr>
+													<td>Sony Sports Pack</td>
+													<td>Rs. 46.02</td>
 												</tr>											
 											</tbody>
 										</table>
