--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 					<div class="testimonials">
 						<section>
 							<div class="content">
-								<h4>FTA Pack (Free to Air) Base/Mandatory Package</h4>
+								<h4>NCF (includes FTA Pack) : Mandatory</h4>
 									<div class="table-wrapper">
 										<table class="alt">
 											<thead>
@@ -157,7 +157,7 @@
 											</thead>
 											<tbody>
 												<tr>
-													<td>FTA</td>
+													<td>NCF</td>
 													<td>Rs. 130.00 + TAX</td>
 												</tr>											
 											</tbody>
@@ -171,7 +171,7 @@
 						</section>
 						<section>
 							<div class="content">
-								<h4>Jay Packages (Rates Inc. FTA and Taxes)</h4>
+								<h4>Jay Packages (Rates Inc. NCF and Taxes)</h4>
 									<div class="table-wrapper">
 										<table class="alt">
 											<thead>
@@ -219,7 +219,7 @@
 											</thead>
 											<tbody>
 												<tr>
-													<td>Jay NCF (Mandatory)</td>
+													<td>NCF (Mandatory)</td>
 													<td>Rs. 153.40</td>
 												</tr>
 												<tr>
@@ -251,7 +251,7 @@
 													<td>Rs. 5.02</td>
 												</tr>
 												<tr>
-													<td>Sony Sports Pack</td>
+													<td>Times Network</td>
 													<td>Rs. 5.90</td>
 												</tr>
 												<tr>
