--- a/index.html
+++ b/index.html
@@ -328,6 +328,10 @@
 								<li>Office 1: +91 8866199346</li>
 								<li>Office 2: +91 7265844716</li>
 							</ul>
+							<h4>E-mail</h4>
+							<ul class="alt">
+								<li>alfacablenetwork01@gmail.com</li>
+							</ul>
 						</section>
 					</div>
 					<div class="copyright">
